<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.EntrantEditUserDetailsView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Profile Image -->
        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"/>

        <!-- Background for readability -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="#CCFFFFFF"
            android:elevation="4dp"
            android:padding="16dp">

        <!-- Name, Email Phone fields -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/edit_user_details_username_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name:"
                    android:textSize="20sp"
                    android:layout_marginEnd="8dp" />
                <EditText
                    android:id="@+id/edit_user_details_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:hint="Enter your name" />
            </LinearLayout>

            <!-- Email -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">
                <TextView
                    android:id="@+id/edit_user_details_email_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email:"
                    android:textSize="20sp"
                    android:layout_marginEnd="8dp" />
                <EditText
                    android:id="@+id/edit_user_details_email_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textEmailAddress"
                    android:hint="Enter your email" />
            </LinearLayout>

            <!-- Phone -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">
                <TextView
                    android:id="@+id/edit_user_details_phone_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Phone:"
                    android:textSize="20sp"
                    android:layout_marginEnd="8dp" />
                <EditText
                    android:id="@+id/edit_user_details_phone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="Enter your phone number" />
            </LinearLayout>

            <!-- Notification  -->
            <Switch
                android:id="@+id/switch_organizer_notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Organizer Notifications"
                android:textSize="18sp" />
            <Switch
                android:id="@+id/switch_admin_notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Administrator Notifications"
                android:textSize="18sp" />
        </LinearLayout>
    </FrameLayout>

    <!-- Save and Back Buttons -->
    <Button
        android:id="@+id/edit_user_details_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Save" />
    <Button
        android:id="@+id/back_button_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back" />
</LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
