...
        android:layout_marginTop="32dp"
        android:text="Manage Facility"
        android:textSize="10sp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        tools:listitem="@layout/event_list_item"
...
        android:id="@+id/button_create_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:text="New Event" />

    <Button
        android:id="@+id/sendNotificationToAllEntrantsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send To All" />
...
