...
        android:gravity="center"
        android:layout_above="@+id/button_DetailContainer"
        android:layout_marginBottom="16dp">

        <!-- Generate QR Code Button -->
        <Button
            android:id="@+id/generateQRCodeButton"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="QR Code" />

...
            android:visibility="gone"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal" />

        <!-- Select Lottery Users Button -->
        <Button
            android:id="@+id/button_SelectLotteryUsers"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="Lottery" />

...
